Added login to tokenService

--- a/projects/example/src/app/app.component.html
+++ b/projects/example/src/app/app.component.html
@@ -2,3 +2,7 @@
 <div *ngIf="userObservable | async as user">
   <p>{{user.attributes.email}}</p>
 </div>
+<button (click)="login()">Login</button>
+<div *ngIf="tokenObservable | async as token">
+  <p>{{token.attributes.payload}}</p>
+</div>
