--- a/projects/example/src/app/app.component.html
+++ b/projects/example/src/app/app.component.html
@@ -1,18 +1,10 @@
-<label for="email">email</label>
-<input id="email" [(ngModel)]="email" placeholder="email">
-<button (click)="addUser()">Register User</button>
-<div *ngIf="userObservable | async as user">
-  <p>{{user.attributes.email}}</p>
-</div>
-<button (click)="login()">Login</button>
-<div *ngIf="tokenObservable | async as token">
-  <p>{{token.attributes.payload}}</p>
-</div>
-<button (click)="getPasswords()">Get Secrets</button>
-<div *ngIf="passwordObservables | async as passwords">
-  <p>{{passwords.toString()}}</p>
-</div>
-<button (click)="addPassword()">Add Secret</button>
-<div *ngIf="passwordObservable | async as password">
-  <p>{{password}}</p>
+<div class="container">
+  <div class="my-3">
+    <h3>Register</h3>
+    <hpk-register-form></hpk-register-form>
+  </div>
+  <div class="my-3">
+    <h3>Login</h3>
+    <hpk-login-form></hpk-login-form>
+  </div>
 </div>
