--- a/projects/harpokrat/src/lib/components/tables/resource-table/resource-table.component.html
+++ b/projects/harpokrat/src/lib/components/tables/resource-table/resource-table.component.html
@@ -1,22 +1,28 @@
-<ng-container *ngIf="renderSettingsObservable | async as settings">
-  <div class="text-center" *ngIf="settings.datasource.loading; else loaded">
-    <span class="spinner-border"></span>
-  </div>
-  <ng-template #loaded>
-    <table class="table">
+<div *ngIf="renderSettingsObservable | async as settings">
+    <table class="table table-responsive">
       <thead>
       <tr>
         <th *ngIf="settings.showIndex">ID</th>
-        <th *ngFor="let column of settings.columns">{{column}}</th>
+        <th *ngFor="let column of settings.columns" (click)="setSort(settings.datasource, column.key)"
+            class="clickable text-truncate">
+          <i class="material-icons" *ngIf="settings.datasource.sort === column.key">
+            {{settings.datasource.sortDescending ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}
+          </i>
+          <span>{{column.name}}</span>
+        </th>
+      </tr>
+      <tr class="text-center" *ngIf="settings.datasource.loading">
+        <td [colSpan]="settings.columns.length + 1" class="text-center">
+          <span class="spinner-border"></span>
+        </td>
       </tr>
       </thead>
       <tbody>
       <tr *ngFor="let row of settings.rows; let i = index">
         <td *ngIf="settings.showIndex">{{settings.datasource.page * settings.datasource.size + i + 1}}</td>
-        <td *ngFor="let column of row">{{column}}</td>
+        <td *ngFor="let column of row" class="text-truncate">{{column}}</td>
       </tr>
       </tbody>
     </table>
-  </ng-template>
   <hpk-pager [datasource]="settings.datasource"></hpk-pager>
-</ng-container>
+</div>
