--- a/projects/harpokrat/src/lib/components/tables/resource-table/resource-table.component.html
+++ b/projects/harpokrat/src/lib/components/tables/resource-table/resource-table.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="renderSettingsObservable | async as settings">
-    <table class="table table-responsive">
+    <table class="table">
       <thead>
       <tr>
         <th *ngIf="settings.showIndex">ID</th>
