--- a/projects/example/src/styles.scss
+++ b/projects/example/src/styles.scss
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+
+$body-bg: #efefef;
+
 @import "~bootstrap/scss/bootstrap";
 
 .icon {
