--- a/projects/harpokrat/src/lib/components/forms/login-form/login-form.component.html
+++ b/projects/harpokrat/src/lib/components/forms/login-form/login-form.component.html
@@ -5,8 +5,8 @@
            class="form-control">
   </div>
   <div class="form-group">
-    <label for="login-form--input--password">Secret</label>
-    <input id="login-form--input--password" type="password" formControlName="password" placeholder="Secret"
+    <label for="login-form--input--password">Password</label>
+    <input id="login-form--input--password" type="password" formControlName="password" placeholder="Password"
            class="form-control">
   </div>
 </hpk-form>
