--- a/projects/example/src/app/app.component.html
+++ b/projects/example/src/app/app.component.html
@@ -12,6 +12,6 @@
       <h3>Create Secret</h3>
       <hpk-secret-form></hpk-secret-form>
     </div>
-    <hpk-secrets-table></hpk-secrets-table>
+    <!--<hpk-secrets-table></hpk-secrets-table>-->
   </ng-container>
 </div>
