--- a/projects/harpokrat/src/lib/components/forms/form/form.component.html
+++ b/projects/harpokrat/src/lib/components/forms/form/form.component.html
@@ -1,9 +1,9 @@
 <form class="form-container" [formGroup]="formGroup" (ngSubmit)="onSubmit()" *ngIf="formGroup">
   <hpk-error-alert class="mb-3" *ngIf="error" [allowDismiss]="true"
-                   [text]="error" (dismissed)="error = null"></hpk-error-alert>
+                   [text]="error" (dismissed)="dismissError()"></hpk-error-alert>
   <ng-content></ng-content>
   <div class="form-group">
-    <button class="btn btn-primary" [disabled]="formGroup.invalid || loading">
+    <button class="btn {{buttonClass}}" [disabled]="formGroup.invalid || loading">
       <span class="spinner-border spinner-border-sm" *ngIf="loading; else notLoading">
         <span class="sr-only">Loading</span>
       </span>
