--- a/projects/harpokrat/src/lib/components/forms/secret-form/secret-form.component.html
+++ b/projects/harpokrat/src/lib/components/forms/secret-form/secret-form.component.html
@@ -1,4 +1,4 @@
-<hpk-form [formGroup]="secretForm" [loading]="loading" [error]="error" submitTitle="Create" (formSubmit)="onCreate()">
+<hpk-form [formGroup]="secretForm" [loading]="loading" [error]="error" submitTitle="Save" (formSubmit)="onCreate()">
   <div class="form-group">
     <label for="login-form--input--name">Name</label>
     <input id="login-form--input--name" type="text" formControlName="name" placeholder="Name"
