--- a/projects/harpokrat/src/lib/components/alerts/error-alert/error-alert.component.html
+++ b/projects/harpokrat/src/lib/components/alerts/error-alert/error-alert.component.html
@@ -1,5 +1,5 @@
 <div class="alert-danger p-1">
-  <button class="btn btn-link text-danger text-decoration-none" (click)="dismiss()" *ngIf="allowDismiss">
+  <button class="btn btn-link text-danger text-decoration-none" (click)="dismiss()" *ngIf="allowDismiss" type="button">
     <i class="icon">close</i>
   </button>
   <span>{{text}}</span>
