--- a/projects/example/src/app/app.component.html
+++ b/projects/example/src/app/app.component.html
@@ -8,9 +8,8 @@
     <hpk-login-form></hpk-login-form>
   </div>
   <div class="my-3">
-    <hpk-request-password-form></hpk-request-password-form>
+    <hpk-profile></hpk-profile>
   </div>
-  <hpk-secure-action [secureAction]="sampleSecureAction" token="aled"></hpk-secure-action>
   <ng-container *ngIf="authenticatedObservable | async">
     <div class="my-3">
       <h3>Create Secret</h3>
