--- a/projects/harpokrat/src/lib/components/forms/register-form/register-form.component.html
+++ b/projects/harpokrat/src/lib/components/forms/register-form/register-form.component.html
@@ -1,4 +1,4 @@
-<hpk-form [formGroup]="registerForm" [loading]="loading" [(error)]="error" submitTitle="Register"
+<hpk-form [formGroup]="registerForm" [loading]="loading" [(error)]="error" [submitTitle]="user ? 'Save' : 'Register'"
           (formSubmit)="onRegister()">
   <div class="form-row">
     <div class="col-12 col-md-6 form-group">
