--- a/projects/harpokrat/src/lib/components/profile-viewer/profile-viewer.component.html
+++ b/projects/harpokrat/src/lib/components/profile-viewer/profile-viewer.component.html
@@ -2,7 +2,7 @@
   <div  class="container-fluid">
     <div class="mb-3">
       <span>{{user.email}}</span>
-      <span class="ml-2 badge badge-danger" *ngIf="!user.emailValidated">Not Verified</span>
+      <span class="ml-2 badge badge-danger" *ngIf="!user.emailAddressValidated">Not Verified</span>
     </div>
     <div class="row">
       <div class="col-6">
