--- a/projects/harpokrat/src/lib/components/forms/secret-delete-form/secret-delete-form.component.html
+++ b/projects/harpokrat/src/lib/components/forms/secret-delete-form/secret-delete-form.component.html
@@ -1,4 +1,4 @@
 <div *ngIf="secret">
-  <h5>Are you sure you want to delete {{secret.attributes.name}} ?</h5>
+  <h5>Are you sure you want to delete this secret ?</h5>
   <hpk-delete-form [service]="secretService" [resource]="secret"></hpk-delete-form>
 </div>
