--- a/projects/harpokrat/src/lib/components/secret-viewer/secret-viewer.component.html
+++ b/projects/harpokrat/src/lib/components/secret-viewer/secret-viewer.component.html
@@ -1,13 +1,13 @@
 <div>
   <div class="d-flex flex-row">
-    <a class="h1" target="_blank" [href]="secret.domain">{{secret.name}}</a>
+    <a class="h1" target="_blank" [href]="secret.GetDomain()">{{secret.GetName()}}</a>
   </div>
   <div>
-    <div class="mb-3" *ngIf="secret.login">
+    <div class="mb-3" *ngIf="secret.GetLogin()">
       <label>Login</label>
       <div class="input-group">
-        <input class="form-control flex-grow-1" [disabled]="true" [ngModel]="secret.login"/>
-        <button class="btn btn-primary input-group-prepend" (click)="copyText(secret.login)">
+        <input class="form-control flex-grow-1" [disabled]="true" [ngModel]="secret.GetLogin()"/>
+        <button class="btn btn-primary input-group-prepend" (click)="copyText(secret.GetLogin())">
           <i class="icon">file_copy</i>
         </button>
       </div>
@@ -15,8 +15,8 @@
     <div>
       <label>Password</label>
       <div class="input-group">
-        <input type="password" class="form-control flex-grow-1" [disabled]="true" [ngModel]="secret.password"/>
-        <button class="btn btn-primary input-group-prepend" (click)="copyText(secret.password)">
+        <input type="password" class="form-control flex-grow-1" [disabled]="true" [ngModel]="secret.GetPassword()"/>
+        <button class="btn btn-primary input-group-prepend" (click)="copyText(secret.GetPassword())">
           <i class="icon">file_copy</i>
         </button>
       </div>
